tests/fixtures/language/v3/valid/entities/entity-with-relationship.allium
-- allium: 3

entity Order {
    customer: Customer
}

entity Customer {
    orders: Order with customer = this
}

rule PlaceOrder {
    when: OrderPlaced(customer)
    ensures: Order.created(customer: customer)
}
