tests/fixtures/language/v3/invalid/rules/undefined-type-reference.allium
-- allium: 3

rule UseGhost {
    when: T(x)
    ensures: NonExistentEntity.created(name: x)
}
